@@ -2,6 +2,7 @@ Revision history for Getopt-Long
 
 {{$NEXT}}
     - Add compat-builtin option
+    - Add compat-negation option
     - Only catch Exceptional in ARGS-TO-CAPTURE
 
 0.1.4  2020-02-11T00:13:46+01:00
